--- a/nano/example.httpd.conf
+++ b/nano/example.httpd.conf
@@ -8,14 +8,12 @@ NameVirtualHost *:80
 DocumentRoot /www/example1
 ServerName www.example.com
 
-# Other directives here
-
+<VirtualHost *:80>
+DocumentRoot /www/unix
+ServerName www.unix.com
 </VirtualHost>
 
 <VirtualHost *:80>
-DocumentRoot /www/example2
-ServerName www.example.org
-
-# Other directives here
-
+DocumentRoot /www/linux
+ServerName www.unix.org
 </VirtualHost>
